# NodePlot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test_data.csv  test_plot.json
nodeplot/: CMakeLists.txt
nodeplot-cmd/: CMakeLists.txt
nodeplot-cmd/src/: main.cpp
nodeplot-gui/: CMakeLists.txt
nodeplot-gui/src/: main.cpp  node_renderer.cpp  node_renderer.h  render_node.h  render_node_graph.cpp  render_node_graph.h  style.h  svg_renderer.cpp  svg_renderer.h  window.cpp  window.h
nodeplot-gui/src/node_impl/: column_select.cpp  create_graph.cpp  csv_import.cpp  filter_table.cpp  output.cpp  sampled_property_extract.cpp  series_create.cpp
nodeplot/include/nodeplot/: error.h  eval_node_graph.h  file.h  node.h  node_graph.h  node_registry.h  nodeplot.h  nodes.h  types.h  utils.h
nodeplot/src/: eval_node_graph.cpp  file.cpp  node_graph.cpp  node_registry.cpp  nodeplot.cpp  types.cpp  utils.cpp
nodeplot/src/node_impl/: binary_operation.cpp  column_select.cpp  create_graph.cpp  create_plot.cpp  create_plot_style.cpp  csv_import.cpp  figure.cpp  filter_table.cpp  function.cpp  grid_layout.cpp  input.cpp  output.cpp  sampled_property_extract.cpp  series_create.cpp  value.cpp
